# Unfour

./: .claudeignore  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  NEXT_STEPS.md  OPEN_ISSUES.md  PROJECT_STATE.md  README.md  README.zh-CN.md  SECURITY.md  design.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: launch.json
.design-sync/: NOTES.md  build-css.mjs  config.json  conventions.md
.design-sync/previews/: Badge.tsx  Button.tsx  ConnectionStatus.tsx  ContextMenu.tsx  DataTable.tsx  Dialog.tsx  DropdownMenu.tsx  EmptyState.tsx  ErrorState.tsx  IconButton.tsx  Input.tsx  LoadingState.tsx  Select.tsx  StatusBadge.tsx  Tabs.tsx  Toolbar.tsx  TreeView.tsx
.github/workflows/: release.yml
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: command_bus.rs  commands.rs  lib.rs
crates/database-engine/: Cargo.toml
crates/database-engine/src/: database.rs  lib.rs
crates/database-engine/src/database_tests/: mysql.rs  safety.rs  support.rs  workspace.rs
crates/http-engine/: Cargo.toml
crates/http-engine/src/: api_client.rs  lib.rs
crates/http-engine/src/api_client/: openapi_export.rs  openapi_import.rs
crates/http-engine/src/api_client/openapi_export/: content.rs  convert.rs  model.rs  source.rs  tests.rs
crates/http-engine/src/api_client/openapi_export/fixtures/: full_collection.json
crates/http-engine/src/api_client/openapi_import/: value_parser.rs
crates/http-engine/src/api_client_tests/: collections.rs
crates/local-storage/: Cargo.toml
crates/local-storage/migrations/: 0002_api_request_auth_json.sql  0003_saved_sql.sql  0004_api_collection_folders.sql  0005_workspace_policy.sql  20260708113000_core_constraint_hardening.sql  20260708150000_workspace_name_unique.sql  20260708221117_core_initial_schema.sql  20260721090000_core_ssh_tasks.sql
crates/local-storage/src/: activity_log.rs  lib.rs  local_db.rs  terminal_history.rs
crates/local-storage/src/local_db_tests/: mod.rs
crates/local-storage/src/local_db_tests/scenarios/: connection_paths.rs  connection_subtypes.rs  history_and_indexes.rs  migrations.rs  schema_shape.rs  workspace_constraints.rs
crates/local-storage/src/terminal_history_tests/: mod.rs
crates/secret-store/: Cargo.toml
crates/secret-store/src/: lib.rs  secret_store.rs
crates/secret-store/src/secret_store_tests/: mod.rs
crates/secret-store/tests/: os_keychain_release_smoke.rs
crates/ssh-engine/: Cargo.toml
crates/ssh-engine/src/: host_key.rs  lib.rs  ssh.rs
crates/ssh-engine/src/host_key_tests/: mod.rs
crates/ssh-engine/src/ssh/: native_transport.rs  session.rs  sftp.rs
crates/ssh-engine/src/ssh/sftp/: support.rs
crates/ssh-engine/src/ssh_tests/: session.rs  support.rs
crates/ssh-engine/src/ssh_tests/session/: connection.rs  history.rs  lifecycle.rs  operations.rs  reconnect.rs
crates/ssh-engine/src/task/: command_step.rs  download_step.rs  events.rs  mod.rs  native.rs  runner.rs  storage.rs  template.rs  upload_step.rs
crates/unfour-app/: Cargo.toml
crates/unfour-app/src/: commands.rs  lib.rs
crates/unfour-app/src/commands/: api.rs  app.rs  database.rs  ssh.rs
crates/unfour-command-bus/: AGENTS.md  Cargo.toml  README.md
crates/unfour-command-bus/src/: api_commands.rs  core_commands.rs  lib.rs  lib_tests.rs  ssh_commands.rs  storage_paths.rs
crates/unfour-command-bus/tests/: paths.rs
crates/unfour-core/: Cargo.toml
crates/unfour-core/src/: ai_reserved.rs  app_error.rs  lib.rs  models.rs  redaction.rs  sync_reserved.rs
crates/unfour-core/src/models/: api.rs  credentials.rs  database.rs  sftp.rs  ssh.rs  ssh_task.rs  system.rs  workspace.rs
crates/unfour-mcp/: Cargo.toml
crates/unfour-mcp/src/: command_bus_adapter.rs  lib.rs  main.rs  protocol.rs  response.rs  sanitize.rs  server.rs
crates/unfour-mcp/src/command_bus_adapter/: contract.rs
crates/unfour-mcp/src/command_bus_adapter_tests/: mod.rs
crates/unfour-mcp/src/server_tests/: mod.rs
crates/unfour-mcp/src/tools/: activity.rs  api.rs  api_tests.rs  confirmation.rs  database.rs  database_create.rs  database_tests.rs  mock.rs  mod.rs  policy.rs  real.rs  ssh.rs  ssh_tests.rs  system.rs
crates/unfour-mcp/src/tools/api_tests/: environment.rs  history.rs  requests.rs  schema.rs  send_request.rs  utilities.rs
crates/unfour-mcp/src/tools/database_tests/: connections.rs  execute.rs  query_readonly.rs  schema.rs  test_connection.rs
crates/unfour-mcp/src/tools/policy_tests/: mod.rs
crates/unfour-mcp/src/tools/ssh/: connection.rs  helpers.rs  operations.rs
crates/unfour-mcp/src/tools/ssh_tests/: connection.rs  diagnostics.rs  execution.rs  files.rs  fixtures.rs
crates/unfour-mcp/src/tools/tools_tests/: mod.rs
crates/unfour-paths/: Cargo.toml
crates/workspace-engine/: Cargo.toml
crates/workspace-engine/src/: lib.rs  workspace.rs
crates/workspace-engine/src/workspace/: layout.rs
crates/workspace-engine/src/workspace_tests/: mod.rs
docs/: roadmap.md
docs/agents/: EXECUTION_PROTOCOL.md  NEXT_STEPS.md  OPEN_ISSUES.md  PROJECT_MAP.md  PROJECT_STATE.md  START_HERE.md
docs/ai/: mcp.md
docs/architecture/: data-storage.md  diagnostics.md  large-file-audit.md  module-boundaries.md  package-boundaries.md  project-structure.md  security-model.md
docs/archive/: README.md
docs/engineering/: architecture.md  command-bus.md  progress.md  security.md  task-breakdown.md  workspace-model.md
docs/evaluation/: state-persistence-evaluation.md
docs/mcp/: codex-setup.md  overview.md  tools.md
docs/release/: distribution.md  (+2 more)
scripts/: check-large-files.mjs  check-large-files.test.mjs  check-shared-tokens.mjs  large-files-baseline.json  sync-version.mjs
src/: App.tsx  styles.css  types.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: activity_log.rs  app_error.rs  command_bus.rs  commands.rs  lib.rs  local_db.rs  models.rs
src-tauri/src/services/: api_client.rs  database.rs  secret_store.rs  workspace.rs
(+48 files in other folders)
