[workspace]
members = [
  "apps/desktop/src-tauri",
  "crates/unfour-core",
  "crates/local-storage",
  "crates/http-engine",
  "crates/database-engine",
  "crates/ssh-engine",
  "crates/workspace-engine",
  "crates/unfour-paths",
  "crates/secret-store",
  "crates/unfour-command-bus",
  "crates/unfour-mcp",
  "crates/unfour-app",
]
resolver = "2"

