[package]
name = "unfour-http-engine"
version.workspace = true
edition = "2021"
license = "Apache-2.0"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["brotli", "cookies", "deflate", "gzip", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["chrono", "json", "macros", "mysql", "postgres", "runtime-tokio-rustls", "sqlite", "uuid"] }
unfour-core = { path = "../unfour-core" }
unfour-diag = { path = "../unfour-diag" }
unfour-local-storage = { path = "../local-storage" }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
