[package]
name = "unfour-ssh-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["chrono", "json", "macros", "mysql", "postgres", "runtime-tokio-rustls", "sqlite", "uuid"] }
unfour-core = { path = "../unfour-core" }
unfour-local-storage = { path = "../local-storage" }
uuid = { version = "1", features = ["serde", "v4"] }

[features]
default = []
ssh-native = ["dep:russh"]

[dependencies.russh]
version = "0.61"
default-features = false
features = ["flate2", "ring", "rsa"]
optional = true

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
