[package]
name = "unfour-ssh-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["chrono", "json", "macros", "mysql", "postgres", "runtime-tokio-rustls", "sqlite", "uuid"] }
unfour-core = { path = "../unfour-core" }
unfour-local-storage = { path = "../local-storage" }
unfour-secret-store = { path = "../secret-store" }
uuid = { version = "1", features = ["serde", "v4"] }

[features]
default = []
ssh-native = ["dep:russh", "dep:ssh-key", "dep:tokio"]

[dependencies.russh]
version = "0.61"
default-features = false
features = ["flate2", "ring", "rsa"]
optional = true

[dependencies.ssh-key]
version = "=0.7.0-rc.10"
default-features = false
optional = true

[dependencies.tokio]
version = "1"
features = ["net", "sync", "time"]
optional = true

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
