[package]
name = "unfour-ssh-engine"
version.workspace = true
edition = "2021"
license = "Apache-2.0"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["chrono", "json", "macros", "mysql", "postgres", "runtime-tokio-rustls", "sqlite", "uuid"] }
unfour-core = { path = "../unfour-core" }
unfour-diag = { path = "../unfour-diag" }
unfour-local-storage = { path = "../local-storage" }
unfour-secret-store = { path = "../secret-store" }
uuid = { version = "1", features = ["serde", "v4"] }

[features]
default = []
ssh-native = ["dep:russh", "dep:russh-sftp", "dep:ssh-key", "dep:tokio"]

[dependencies.russh]
version = "0.61"
default-features = false
features = ["flate2", "ring", "rsa"]
optional = true

[dependencies.russh-sftp]
version = "2.3"
optional = true

[dependencies.ssh-key]
version = "=0.7.0-rc.10"
default-features = false
optional = true

[dependencies.tokio]
version = "1"
features = ["fs", "io-util", "net", "sync", "time"]
optional = true

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
