[package]
name = "unfour-app"
version = "0.1.0"
description = "Shared Tauri composition layer (plugins, command-bus setup, AppState, and commands) reused by every Unfour edition's binary."
authors = ["Unfour"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde_json = "1"
unfour-command-bus = { path = "../unfour-command-bus" }
unfour-core = { path = "../unfour-core" }
unfour-local-storage = { path = "../local-storage" }
unfour-paths = { path = "../unfour-paths" }
unfour-secret-store = { path = "../secret-store" }

[features]
default = []
ssh-native = ["unfour-command-bus/ssh-native"]
