[package]
name = "unfour-app"
version.workspace = true
description = "Shared Tauri composition layer (plugins, command-bus setup, AppState, and commands) reused by every Unfour edition's binary."
authors = ["Unfour"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unfour-command-bus = { path = "../unfour-command-bus" }
unfour-core = { path = "../unfour-core" }
unfour-diag = { path = "../unfour-diag" }
unfour-local-storage = { path = "../local-storage" }
unfour-paths = { path = "../unfour-paths" }
unfour-secret-store = { path = "../secret-store" }

[features]
default = []
deep-link = ["tauri-plugin-single-instance/deep-link"]
ssh-native = ["unfour-command-bus/ssh-native"]
