[package]
name = "unfour-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
unfour-command-bus = { path = "../unfour-command-bus" }
unfour-core = { path = "../unfour-core" }

[dev-dependencies]
unfour-core = { path = "../unfour-core" }
unfour-local-storage = { path = "../local-storage" }
