[package]
name = "unfour-mcp"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
unfour-command-bus = { path = "../unfour-command-bus" }
unfour-core = { path = "../unfour-core" }

[dev-dependencies]
unfour-core = { path = "../unfour-core" }
unfour-local-storage = { path = "../local-storage" }

# `ssh-native` is enabled by default so the released MCP binary can actually
# execute `unfour.ssh.run_diagnostic` — SSH log/service inspection is a core
# backend-troubleshooting capability. Build with `--no-default-features` to
# produce a binary without native SSH transport; the tool stays registered but
# returns COMMAND_BUS_OPERATION_UNSUPPORTED.
[features]
default = ["ssh-native"]
ssh-native = ["unfour-command-bus/ssh-native"]
