[package]
name = "unfour-workspace"
version = "0.1.0"
description = "A cross-platform operations and development workspace."
authors = ["Unfour"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "unfour_workspace_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
unfour-core = { path = "../../../crates/unfour-core" }
unfour-database-engine = { path = "../../../crates/database-engine" }
unfour-http-engine = { path = "../../../crates/http-engine" }
unfour-local-storage = { path = "../../../crates/local-storage" }
unfour-secret-store = { path = "../../../crates/secret-store" }
unfour-ssh-engine = { path = "../../../crates/ssh-engine" }
unfour-workspace-engine = { path = "../../../crates/workspace-engine" }

[features]
default = []
ssh-native = ["unfour-ssh-engine/ssh-native"]
