[package]
name = "unfour"
version.workspace = true
description = "A cross-platform operations and development workspace."
authors = ["Unfour"]
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "unfour_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
# Kept as a direct dependency so tauri-build can resolve this plugin's
# permission manifests for `capabilities/` (the runtime `.plugin()` call lives
# in `unfour-app`). Any plugin referenced by a capability must be a direct
# dependency of the binary crate, not only of `unfour-app`.
tauri-plugin-opener = "2"
# Direct dependency (same reason as opener): SFTP upload/download use the
# frontend dialog plugin, so tauri-build must resolve its permission manifest.
tauri-plugin-dialog = "2"
# Direct dependency (same reason as opener): tauri-build must resolve this
# plugin's permission manifest for `capabilities/`. The runtime `.plugin()`
# call lives in `unfour-app`; any plugin referenced by a capability must be a
# direct dependency of this binary crate, not only of `unfour-app`.
tauri-plugin-window-state = "2"
# Shared composition layer (plugins, command-bus setup, AppState, commands).
unfour-app = { path = "../../../crates/unfour-app" }

[dev-dependencies]
sqlx = { version = "0.8", default-features = false, features = ["chrono", "json", "macros", "runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]
# Real SSH transport is enabled for the desktop binary so connected sessions
# write to an actual PTY and stream output back. Without it, SSH runs in the
# simulated fallback (used by the browser/test builds) where typed input is
# never echoed. Disable explicitly with `--no-default-features` for a
# dependency-light build.
default = ["ssh-native"]
ssh-native = ["unfour-app/ssh-native"]
